added logout and profileinfo

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,6 +14,8 @@
           </ion-menu-toggle>
         </ion-list>
 
+        <app-profile></app-profile><app-logout-button></app-logout-button>
+
         <!-- <ion-list id="labels-list">
           <ion-list-header>Labels</ion-list-header>
 
