--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,7 +14,11 @@
           </ion-menu-toggle>
         </ion-list>
 
-        <app-profile></app-profile><app-logout-button></app-logout-button>
+        <ion-grid>
+          <ion-row><app-profile></app-profile></ion-row>
+          <ion-row><app-logout-button></app-logout-button></ion-row>
+        </ion-grid>
+        
 
         <!-- <ion-list id="labels-list">
           <ion-list-header>Labels</ion-list-header>
