--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -16,7 +16,7 @@
   </ion-header>
 
   <div id="container">
-    <app-data-refresher></app-data-refresher>
+    <!-- <app-data-refresher></app-data-refresher> -->
     <strong class="capitalize">Titel2</strong>
     <p>Explore <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
   </div>
