adapted default page, added appointment data as subscriptalbe

--- a/src/app/first-sites/appointment-overview/appointment-overview.page.html
+++ b/src/app/first-sites/appointment-overview/appointment-overview.page.html
@@ -1,9 +1,3 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>appointment-overview</ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content>
-
-</ion-content>
+<app-page-layout [name]="'Terminübersicht'" >
+  TEST
+</app-page-layout>
