--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,6 +30,7 @@
         </ion-list> -->
       </ion-content>
     </ion-menu>
+    <!-- <ion-content [fullscreen]="true" ></ion-content> -->
     <ion-router-outlet id="main-content"></ion-router-outlet>
   </ion-split-pane>
 </ion-app>
