--- a/src/app/first-sites/open-inquirys/open-inquirys.page.html
+++ b/src/app/first-sites/open-inquirys/open-inquirys.page.html
@@ -1,18 +1,5 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-menu-button></ion-menu-button>
-    </ion-buttons>
-    <ion-title>offene Anfragen</ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Titel1</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<app-page-layout [name]="'offene Anfragen'" >
+  Blub
 
   <div id="container">
     <ul id="appointment_container">
@@ -21,4 +8,4 @@
     </li>
   </ul>
   </div>
-</ion-content>
+</app-page-layout>
