minimal style adapts

--- a/src/app/basics/page-layout/page-layout.component.html
+++ b/src/app/basics/page-layout/page-layout.component.html
@@ -8,8 +8,8 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <div id="container">
-    <app-data-refresher></app-data-refresher>
+  <app-data-refresher></app-data-refresher>
+  <div class="content">
     <ng-content></ng-content>
   </div>
 </ion-content>
