locale date format, generated date card

--- a/src/app/basics/sidemenu/sidemenu.component.html
+++ b/src/app/basics/sidemenu/sidemenu.component.html
@@ -1,5 +1,7 @@
 <ion-content>
   <ion-list id="menu-list">
+    <ion-note>täda</ion-note>
+    <ion-img src="/assets/images/logo.png"></ion-img>
     <ion-list-header>M & F Magic</ion-list-header>
     <ion-note>Für mehr Magie in Deinem Alltag!</ion-note>
 
