--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
   <ion-split-pane contentId="main-content">
     <ion-menu contentId="main-content" type="overlay">
       <ion-content class="menu">
+        <img src="/assets/images/logo.png" style="width: 70%; margin-left: auto; margin-right: auto; display: block;">
         <ion-list id="inbox-list">
           <ion-list-header>M & F Magic</ion-list-header>
           <ion-note>Für mehr Magie in Deinem Alltag!</ion-note>
