--- a/src/global.scss
+++ b/src/global.scss
@@ -24,3 +24,33 @@
 @import "~@ionic/angular/css/text-alignment.css";
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
+
+
+:root {
+    --ion-color-grey: #c2c0be;
+    --ion-color-grey-rgb: 194,192,190;
+    --ion-color-grey-contrast: #313030;
+    --ion-color-grey-contrast-rgb: 49,48,48;
+    --ion-color-grey-shade: #a8a8a8;
+    --ion-color-grey-tint: #bdbdbd;
+  }
+  
+  .ion-color-grey {
+    --ion-color-base: var(--ion-color-grey);
+    --ion-color-base-rgb: var(--ion-color-grey-rgb);
+    --ion-color-contrast: var(--ion-color-grey-contrast);
+    --ion-color-contrast-rgb: var(--ion-color-grey-contrast-rgb);
+    --ion-color-shade: var(--ion-color-grey-shade);
+    --ion-color-tint: var(--ion-color-grey-tint);
+  }
+  
+  div[slot="content"] {
+    background: rgba(var(--ion-color-grey-rgb), 0.25)
+  }
+
+  ion-accordion-group{
+    ion-accordion{
+        margin: 6px;
+        border-radius: 13px;
+    }
+  }
