--- a/src/app/first-sites/appointment-overview/appointment-overview.page.html
+++ b/src/app/first-sites/appointment-overview/appointment-overview.page.html
@@ -1,8 +1,8 @@
 <app-page-layout [name]="'Terminübersicht'" >
-  <ul id="appointment_container">
     <!-- {{appointments[0]}} -->
-    <ion-list *ngFor="let a of appointments; index as i; first as isFirst" class="appointment_item" lines="inset">
-      <appointment-item [appointment]="a"></appointment-item>
-    </ion-list>
-  </ul>
+    <!-- <ion-list *ngFor="let a of appointments; index as i; first as isFirst" class="appointment_item" lines="inset"> -->
+    <ion-accordion-group [multiple]="false" class="accordionGroup" expand="inset">
+      <appointment-item [appointment]="a" *ngFor="let a of appointments; index as i; first as isFirst" class="appointment_item" lines="inset"></appointment-item>
+    </ion-accordion-group>
+    <!-- </ion-list> -->
 </app-page-layout>
