design adaption open inquirys

--- a/src/app/first-sites/open-inquirys/open-inquirys.page.html
+++ b/src/app/first-sites/open-inquirys/open-inquirys.page.html
@@ -1,4 +1,4 @@
-<app-page-layout [name]="'Anfragenübersicht'" >
+<app-page-layout [name]="'offene Anfragen'" >
   <!-- {{appointments[0]}} -->
   <!-- <ion-list *ngFor="let a of appointments; index as i; first as isFirst" class="appointment_item" lines="inset"> -->
   <ion-accordion-group [multiple]="false" class="accordionGroup" expand="inset">
