--- a/src/app/first-sites/open-inquirys/inquiry-item/inquiry-item.component.html
+++ b/src/app/first-sites/open-inquirys/inquiry-item/inquiry-item.component.html
@@ -7,8 +7,14 @@
     </ion-label>
   </ion-item>
   <div class="ion-padding" slot="content">
+    
+    <h5>{{customer.firstName}} {{customer.lastName}}</h5>
+    <p *ngIf="!(customer.phone === '')">Tel: {{customer.phone}}</p>
+    <p *ngIf="!(customer.email === '')">E-Mail: {{customer.email}}</p><hr>
     <p *ngIf="appointment">Datum: {{appointment.startTime.$date | date: 'dd.MM.yyyy'}} | {{appointment.notes}}</p>
     <p *ngIf="adress">Ort: {{adress.street}}, {{adress.zip}} {{adress.city}} | Entfernung: {{adress.distance}} km</p>
+    <mat-divider></mat-divider>
+    <p>{{conversationItem.notes}}</p>
     <!-- <p>{{event.</p> -->
       <!-- es fehlt: noch api für kunden, conversationen für Kontaktdaten und letzte notes -->
 
