created edit inqury page first attemps

--- a/src/app/first-sites/edit-inquirys/edit-inquirys.page.html
+++ b/src/app/first-sites/edit-inquirys/edit-inquirys.page.html
@@ -1,3 +1,5 @@
 <app-page-layout [name]="'Anfragenbearbeitung'" >
-  Juhuuuu
+  <ion-accordion-group [multiple]="false" class="accordionGroup" expand="inset">
+    <app-inquiry-item-edit [event]="ev" *ngFor="let ev of events; index as i; first as isFirst" class="inquiry-item-edit" lines="inset"></app-inquiry-item-edit>
+  </ion-accordion-group>
 </app-page-layout>
