--- a/src/app/first-sites/open-inquirys/inquiry-item/inquiry-item.component.html
+++ b/src/app/first-sites/open-inquirys/inquiry-item/inquiry-item.component.html
@@ -1,5 +1,5 @@
 <ion-accordion toggleIcon="caret-forward-outline">
-  <ion-item i18n detail="true" slot="header" color="grey" *ngIf="event.status === 0">
+  <ion-item i18n detail="true" slot="header" color="grey">
     <ion-label>
       <h2 class="test">{{event.description}}</h2>
       <p>vom {{event.arrival_date.$date | date: 'dd.MM.yyyy'}}</p>
