--- a/src/app/first-sites/edit-inquirys/inquiry-item-edit/inquiry-item-edit.component.html
+++ b/src/app/first-sites/edit-inquirys/inquiry-item-edit/inquiry-item-edit.component.html
@@ -2,17 +2,31 @@
   <ion-item i18n detail="true" slot="header" color="grey">
     <ion-label>
       <h2 class="test">{{event.description}}</h2>
-      <p>zuletzt bearbeitet: vom {{event.lastAction.$date | date: 'dd.MM.yyyy'}}</p>
+      <p>zuletzt bearbeitet: {{event.lastAction.$date | date: 'dd.MM.yyyy'}}</p>
       <p></p>
     </ion-label>
   </ion-item>
   <div class="ion-padding" slot="content">
+    <h4 class="test">{{customer.firstName}} {{customer.lastName}}</h4>
+    <p *ngIf="!(customer.phone === '')">
+        <ion-icon name="call-outline" slot="start"></ion-icon>
+        {{customer.phone}}
+    </p>
+    <p *ngIf="!(customer.email === '')">
+        <ion-icon name="mail-outline" slot="start"></ion-icon>
+        {{customer.email}}
+    </p>
+    <p *ngIf="appointment">
+        <ion-icon name="calendar-number-outline" slot="start"></ion-icon>
+        {{appointment.startTime.$date | date: 'EEE dd.MM.yyyy'}} {{appointment.startTime.$date | date: 'HH:mm'}}--<span *ngIf="!((appointment.endTime.$date | date: 'dd.MM') === (appointment.startTime.$date | date: 'dd.MM'))">{{appointment.endTime.$date | date: 'EEE dd.MM.yyyy '}}</span>{{appointment.endTime.$date | date: 'HH:mm'}} | {{appointment.notes}}
+    </p>
+    <p class="ion-text-wrap" *ngIf="adress">
+        <ion-icon name="location-outline" slot="start"></ion-icon>
+        {{adress.street}}, {{adress.zip}} {{adress.city}} <br> 
+        <ion-icon name="map-outline" slot="start"></ion-icon>
+        {{adress.distance}} km
+    </p>
     
-    <h5>{{customer.firstName}} {{customer.lastName}}</h5>
-    <p *ngIf="!(customer.phone === '')">Tel: {{customer.phone}}</p>
-    <p *ngIf="!(customer.email === '')">E-Mail: {{customer.email}}</p><hr>
-    <p *ngIf="appointment">Datum: {{appointment.startTime.$date | date: 'dd.MM.yyyy'}} | {{appointment.notes}}</p>
-    <p *ngIf="adress">Ort: {{adress.street}}, {{adress.zip}} {{adress.city}} | Entfernung: {{adress.distance}} km</p>
     <mat-divider></mat-divider>
     <p>{{conversationItem.notes}}</p>
     <!-- <p>{{event.</p> -->
