--- a/src/app/first-sites/open-inquirys/edit-open-inquiry-dialog/edit-open-inquiry-dialog.component.html
+++ b/src/app/first-sites/open-inquirys/edit-open-inquiry-dialog/edit-open-inquiry-dialog.component.html
@@ -3,8 +3,8 @@
     <ion-buttons slot="start">
       <ion-icon slot="icon-only" name="close-circle-outline" (click)="cancel()"></ion-icon>
     </ion-buttons>
-    <ion-title *ngIf="classicType">Standardkonditionen</ion-title>
-    <ion-title *ngIf="!classicType">individuelle Konditionen</ion-title>
+      <ion-title *ngIf="classicType | async">Standardkonditionen</ion-title>
+      <ion-title *ngIf="!(classicType | async)">individuelle Konditionen</ion-title>
     <ion-buttons slot="end">
       <ion-icon slot="icon-only" name="checkmark-circle-outline" (click)="confirm()"></ion-icon>
     </ion-buttons>
@@ -12,7 +12,37 @@
 </ion-header>
 <ion-content class="ion-padding">
 
-  <ion-title>{{event.description}}</ion-title>
+  <!-- Wechsel Konditionen -->
+  <ion-segment value="default" (ionChange)="change()" color="primary">
+    <ion-segment-button value="default">
+      <ion-label>Standard</ion-label>
+    </ion-segment-button>
+    <ion-segment-button value="individual">
+      <ion-label>individuell</ion-label>
+    </ion-segment-button>
+  </ion-segment>
+
+  <!-- Anfragedaten nochmal -->
+  <ion-card color="primary">
+    <ion-card-header>
+      <ion-card-title>{{event.description}}</ion-card-title>
+      <ion-card-subtitle>Anfrage vom {{event.arrival_date.$date | date: 'dd.MM.yyyy'}}</ion-card-subtitle>
+    </ion-card-header>
+
+    <ion-card-content>
+      <p *ngIf="appointment">Datum: {{appointment.startTime.$date | date: 'dd.MM.yyyy'}} | {{appointment.notes}}</p>
+      <p *ngIf="adress">Ort: {{adress.street}}, {{adress.zip}} {{adress.city}} | Entfernung: {{adress.distance}} km</p>
+      <mat-divider></mat-divider>
+      <p class="infoNotes">{{conversationItem.notes}}</p>
+    </ion-card-content>
+  </ion-card>
+
+  <!-- Angebotsdaten -->
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title>Angebot</ion-card-title>
+    </ion-card-header>
+  </ion-card>
 
   <ion-item>
     <ion-label position="floating">Zusatztext (1. Zeile Angebot)</ion-label>
