--- a/src/app/first-sites/open-inquirys/inquiry-item/inquiry-item.component.html
+++ b/src/app/first-sites/open-inquirys/inquiry-item/inquiry-item.component.html
@@ -20,8 +20,7 @@
       <!-- es fehlt: noch api für kunden, conversationen für Kontaktdaten und letzte notes -->
 
       <!--  -->
-    <ion-button (click)="openClassicOffer()"><ion-icon slot="start" name="paper-plane-outline"></ion-icon> Standardangebot senden</ion-button>
-    <ion-button (click)="sendIndividualOffer()"><ion-icon slot="start" name="color-wand-outline"></ion-icon> individuelle Konditionen</ion-button>
+    <ion-button (click)="openOffer()"><ion-icon slot="start" name="paper-plane-outline"></ion-icon> Angebot bearbeiten</ion-button>
     <ion-button (click)="manual()"><ion-icon slot="start" name="settings-outline"></ion-icon> manuell bearbeiten</ion-button>
   </div>
 </ion-accordion>
