--- a/src/app/first-sites/appointment-overview/appointment-item/appointment-item.component.html
+++ b/src/app/first-sites/appointment-overview/appointment-item/appointment-item.component.html
@@ -8,7 +8,7 @@
   </ion-item>
   <div class="ion-padding" slot="content">
     <!-- {{adress}}, {{appointment.}} -->
-    <p>{{adress.street}}, {{adress.zip}} {{adress.city}}</p>
+    <app-short-event-details [event]="event"></app-short-event-details>
     <ion-button (click)="openDetailedAppointment()"><ion-icon slot="start" name="create-outline"></ion-icon> mehr</ion-button>
   </div>
 </ion-accordion>
