--- a/src/app/first-sites/open-inquirys/inquiry-item/inquiry-item.component.html
+++ b/src/app/first-sites/open-inquirys/inquiry-item/inquiry-item.component.html
@@ -7,12 +7,9 @@
     </ion-label>
   </ion-item>
   <div class="ion-padding" slot="content">
+
+    <app-short-event-details [event]="event"></app-short-event-details>
     
-    <h5>{{customer.firstName}} {{customer.lastName}}</h5>
-    <p *ngIf="!(customer.phone === '')">Tel: {{customer.phone}}</p>
-    <p *ngIf="!(customer.email === '')">E-Mail: {{customer.email}}</p><hr>
-    <p *ngIf="appointment">Datum: {{appointment.startTime.$date | date: 'dd.MM.yyyy'}} | {{appointment.notes}}</p>
-    <p *ngIf="adress">Ort: {{adress.street}}, {{adress.zip}} {{adress.city}} | Entfernung: {{adress.distance}} km</p>
     <mat-divider></mat-divider>
     <p class="infoNotes">{{conversationItem.notes}}</p>
     <!-- <div [innerHTML]="conversationItem.notes.replace('\n', '&#60;br>')"></div> -->
