--- a/src/app/first-sites/open-inquirys/edit-open-inquiry-dialog/edit-open-inquiry-dialog.component.html
+++ b/src/app/first-sites/open-inquirys/edit-open-inquiry-dialog/edit-open-inquiry-dialog.component.html
@@ -25,9 +25,8 @@
   <!-- Anfragedaten nochmal -->
   <app-short-event-details [event]="event"></app-short-event-details>
 
-  <ion-card color="primary">
+  <ion-card color="light">
     <ion-card-header>
-      <ion-card-title>{{event.description}}</ion-card-title>
       <ion-card-subtitle>Anfrage vom {{event.arrival_date.$date | date: 'dd.MM.yyyy'}}</ion-card-subtitle>
     </ion-card-header>
 
@@ -37,13 +36,13 @@
   </ion-card>
 
   <!-- Angebotsdaten -->
-  <ion-card>
+  <ion-card color="medium">
     <ion-card-header>
       <ion-card-title>Angebot</ion-card-title>
     </ion-card-header>
 
     <ion-card-content>
-      <ion-item>
+      <ion-item color="medium">
         <ion-label position="floating">Zusatztext (1. Zeile Angebot)</ion-label>
         <ion-textarea [autoGrow]="true" [spellcheck]="true" [(ngModel)]="additionalText" placeholder="Text eingeben..."></ion-textarea>
       </ion-item>
