--- a/src/app/magic-components/short-event-details/short-event-details.component.html
+++ b/src/app/magic-components/short-event-details/short-event-details.component.html
@@ -1,7 +1,7 @@
 <ion-card i18n color="primary">
   <ion-card-header>
     <ion-card-title>{{data.customer.firstName}} {{data.customer.lastName}}</ion-card-title>
-    <ion-card-subtitle>{{data.event._cls}}</ion-card-subtitle>
+    <ion-card-subtitle>{{data.event.showType}}</ion-card-subtitle>
   </ion-card-header>
 
   <ion-card-content>
