style adapt, driving cost, solo type

--- a/src/app/first-sites/open-inquirys/edit-open-inquiry-dialog/edit-open-inquiry-dialog.component.html
+++ b/src/app/first-sites/open-inquirys/edit-open-inquiry-dialog/edit-open-inquiry-dialog.component.html
@@ -43,17 +43,23 @@
 
     <ion-card-content>
       <div *ngIf="event._cls =='Event.EventERLERNEN'">
-        <ion-item color="medium" [disabled]="classicType | async">
+        <ion-segment [(ngModel)]="event.soloType">
+          <ion-segment-button value="0">normal</ion-segment-button>
+          <ion-segment-button value="1">SOLO Felix</ion-segment-button>
+          <ion-segment-button value="2">SOLO Marvin</ion-segment-button>
+        </ion-segment>
+
+        <ion-item color="primary" [disabled]="classicType | async" class="roundBorder">
           <ion-label position="floating">Basispreis (€):</ion-label>
           <ion-input type="number" [(ngModel)]="event.basePrice"></ion-input>
         </ion-item>
 
-        <ion-item color="medium" [disabled]="classicType | async">
+        <ion-item [disabled]="classicType | async" class="roundBorder">
           <ion-label position="floating">Preis pro Kind (€):</ion-label>
           <ion-input type="number" [(ngModel)]="event.pricePerPerson"></ion-input>
         </ion-item>
 
-        <ion-item color="medium" [disabled]="classicType | async">
+        <ion-item [disabled]="classicType | async" class="roundBorder">
           <ion-label position="floating">Fahrtkostenpauschale (€):</ion-label>
           <ion-input type="number" [(ngModel)]="event.driveCostTotal"></ion-input>
         </ion-item>
