--- a/src/app/first-sites/open-inquirys/edit-open-inquiry-dialog/edit-open-inquiry-dialog.component.scss
+++ b/src/app/first-sites/open-inquirys/edit-open-inquiry-dialog/edit-open-inquiry-dialog.component.scss
@@ -1,3 +1,9 @@
 .infoNotes{
     white-space: pre-line;
 }
+
+.roundBorder{
+    border-radius: 20px;
+    margin-top: 5px;
+    text-align: center;
+}
