--- a/src/app/first-sites/open-inquirys/edit-open-inquiry-dialog/edit-open-inquiry-dialog.component.html
+++ b/src/app/first-sites/open-inquirys/edit-open-inquiry-dialog/edit-open-inquiry-dialog.component.html
@@ -49,20 +49,28 @@
           <ion-segment-button value="2">SOLO Marvin</ion-segment-button>
         </ion-segment>
 
-        <ion-item color="primary" [disabled]="classicType | async" class="roundBorder">
-          <ion-label position="floating">Basispreis (€):</ion-label>
-          <ion-input type="number" [(ngModel)]="event.basePrice"></ion-input>
-        </ion-item>
-
-        <ion-item [disabled]="classicType | async" class="roundBorder">
-          <ion-label position="floating">Preis pro Kind (€):</ion-label>
-          <ion-input type="number" [(ngModel)]="event.pricePerPerson"></ion-input>
-        </ion-item>
-
-        <ion-item [disabled]="classicType | async" class="roundBorder">
-          <ion-label position="floating">Fahrtkostenpauschale (€):</ion-label>
-          <ion-input type="number" [(ngModel)]="event.driveCostTotal"></ion-input>
-        </ion-item>
+        <ion-grid [fixed]="true">
+          <ion-row>
+            <ion-col>
+              <ion-item color="primary" [disabled]="classicType | async" class="roundBorder">
+                <ion-label position="floating">Basispreis (€):</ion-label>
+                <ion-input type="number" [(ngModel)]="event.basePrice"></ion-input>
+              </ion-item>
+            </ion-col>
+            <ion-col>
+              <ion-item color="primary" [disabled]="classicType | async" class="roundBorder">
+                <ion-label position="floating">Preis pro Kind (€):</ion-label>
+                <ion-input type="number" [(ngModel)]="event.pricePerPerson"></ion-input>
+              </ion-item>
+            </ion-col>
+            <ion-col>
+              <ion-item color="primary" [disabled]="classicType | async" class="roundBorder">
+                <ion-label position="floating">Fahrtkostenpauschale (€):</ion-label>
+                <ion-input type="number" [(ngModel)]="event.driveCostTotal"></ion-input>
+              </ion-item>
+            </ion-col>
+          </ion-row>
+        </ion-grid>
 
       </div>
 
