--- a/src/app/first-sites/open-inquirys/edit-open-inquiry-dialog/edit-open-inquiry-dialog.component.scss
+++ b/src/app/first-sites/open-inquirys/edit-open-inquiry-dialog/edit-open-inquiry-dialog.component.scss
@@ -6,4 +6,7 @@
     border-radius: 20px;
     margin-top: 5px;
     text-align: center;
+    // max-width: 40% !important;
+    // margin-left: auto;
+    // margin-right: auto;
 }
