--- a/src/app/first-sites/edit-inquirys/edit-general-event-details/edit-general-event-details.component.html
+++ b/src/app/first-sites/edit-inquirys/edit-general-event-details/edit-general-event-details.component.html
@@ -37,6 +37,8 @@
         <ion-col size="auto"><ion-icon name="arrow-forward-outline" class="ion-no-margin ion-no-padding"></ion-icon></ion-col>
         <ion-col *ngIf="!(editable | async)" size="auto" class="ion-no-margin ion-no-padding"><ion-label class="ion-no-margin ion-no-padding" id="open-modal-end">{{data.appointment.endTime.$date | date: 'dd.MM.yyyy | HH:mm'}}</ion-label></ion-col>
         <ion-col *ngIf="(editable | async)" size="auto" class="ion-no-margin ion-no-padding"><ion-label class="ion-no-margin ion-no-padding" color="medium">{{data.appointment.endTime.$date | date: 'dd.MM.yyyy | HH:mm'}}</ion-label></ion-col>
+        <ion-col *ngIf="!(editable | async)">| {{data.appointment.notes}}</ion-col>
+        <ion-col *ngIf="(editable | async)"><ion-label color="medium">| {{data.appointment.notes}}</ion-label></ion-col>
       </ion-row>
       
       <ion-row class="ion-align-items-center ion-no-padding">
@@ -48,6 +50,11 @@
         <ion-col size="auto"><ion-icon name="map-outline" class="ion-no-margin ion-no-padding"></ion-icon></ion-col>
         <ion-col *ngIf="!(editable | async)">{{data.adress.distance}} km</ion-col>
         <ion-col *ngIf="(editable | async)"><ion-label color="medium">{{data.adress.distance}} km</ion-label></ion-col>
+      </ion-row>
+
+      <ion-row class="ion-align-items-center ion-no-padding">
+        <ion-col size="auto"><ion-icon name="information-circle-outline" class="ion-no-margin ion-no-padding"></ion-icon></ion-col>
+        <ion-col><textarea autosize maxRows="5" minRows="1" [(ngModel)] = "data.event.notes" class="notes-input" [disabled]="editable | async"></textarea></ion-col>
       </ion-row>
 
     </ion-grid>
