--- a/src/app/magic-components/short-event-details/short-event-details.component.html
+++ b/src/app/magic-components/short-event-details/short-event-details.component.html
@@ -31,6 +31,11 @@
     </p>
 
     <p class="ion-text-wrap" *ngIf="data.adress">
+      <ion-icon name="pin-outline" slot="start"></ion-icon>
+      ({{data.adress.adressSTR}})
+  </p>
+
+    <p class="ion-text-wrap" *ngIf="data.adress">
       <ion-icon name="map-outline" slot="start"></ion-icon>
       {{data.adress.distance}} km
   </p>
